# pathtracer

./: .gitignore  Cargo.toml  build.rs
common/: Cargo.toml
common/src/: color.rs  grid.rs  lib.rs  material.rs  math.rs  object.rs  polygon.rs  scratch.rs  vector.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
src/: cuda_utils.rs  grid.rs  main.rs  matrix.rs
