[package]
name = "path-tracer"
version = "0.1.0"
authors = ["Brook Heisler <redattack34@gmail.com>"]
build = "build.rs"

[dependencies]
kernel = { path = "kernel" }
common = { path = "common" }
image = "0.19.0"
obj = "0.8.2"
cuda = { git = "https://github.com/japaric/cuda" }
lazy_static = "1.1"

[build-dependencies]
ptx-builder = "0.4"